# Mahjong-Assistant

./: .gitignore  main.py  pyproject.toml
src/mahjong/: backend.py  capture.py  client.py  constants.py  core.py  gui.py  manager.py  recognition.py
