[project]
name = "mahjong-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=9.0.1",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0.84",
    "PyQt6>=6.7.1",
    "pywin32>=306",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"